src/snapshots/lis_lang__parser__tests__expr_method_call.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 12,
            line: 0,
            col: 12,
        },
        node: FuncCall {
            callee: Span {
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 10,
                    line: 0,
                    col: 10,
                },
                node: PropAccess {
                    obj: Span {
                        range: Pos {
                            offset: 0,
                            line: 0,
                            col: 0,
                        }..Pos {
                            offset: 3,
                            line: 0,
                            col: 3,
                        },
                        node: Var {
                            name: "obj",
                        },
                    },
                    dot_tok: Span {
                        range: Pos {
                            offset: 3,
                            line: 0,
                            col: 3,
                        }..Pos {
                            offset: 4,
                            line: 0,
                            col: 4,
                        },
                        node: (),
                    },
                    prop: Span {
                        range: Pos {
                            offset: 4,
                            line: 0,
                            col: 4,
                        }..Pos {
                            offset: 10,
                            line: 0,
                            col: 10,
                        },
                        node: "method",
                    },
                },
            },
            paren_l: Span {
                range: Pos {
                    offset: 10,
                    line: 0,
                    col: 10,
                }..Pos {
                    offset: 11,
                    line: 0,
                    col: 11,
                },
                node: (),
            },
            args: [],
            paren_r: Span {
                range: Pos {
                    offset: 11,
                    line: 0,
                    col: 11,
                }..Pos {
                    offset: 12,
                    line: 0,
                    col: 12,
                },
                node: (),
            },
        },
    },
)
