src/snapshots/lis_lang__parser__tests__expr_obj.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 14,
            line: 0,
            col: 14,
        },
        node: Obj {
            brace_l: Token {
                sigil: CurlyL,
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 1,
                    line: 0,
                    col: 1,
                },
            },
            props: [
                (
                    "a",
                    Span {
                        range: Pos {
                            offset: 5,
                            line: 0,
                            col: 5,
                        }..Pos {
                            offset: 6,
                            line: 0,
                            col: 6,
                        },
                        node: Num {
                            val: 1.0,
                        },
                    },
                ),
                (
                    "b",
                    Span {
                        range: Pos {
                            offset: 11,
                            line: 0,
                            col: 11,
                        }..Pos {
                            offset: 12,
                            line: 0,
                            col: 12,
                        },
                        node: Num {
                            val: 2.0,
                        },
                    },
                ),
            ],
            brace_r: Token {
                sigil: CurlyR,
                range: Pos {
                    offset: 13,
                    line: 0,
                    col: 13,
                }..Pos {
                    offset: 14,
                    line: 0,
                    col: 14,
                },
            },
        },
    },
)
