src/snapshots/lis_lang__parser__tests__expr_obj_empty.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 2,
            line: 0,
            col: 2,
        },
        node: Obj {
            brace_l: Span {
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 1,
                    line: 0,
                    col: 1,
                },
                node: (),
            },
            props: [],
            brace_r: Span {
                range: Pos {
                    offset: 1,
                    line: 0,
                    col: 1,
                }..Pos {
                    offset: 2,
                    line: 0,
                    col: 2,
                },
                node: (),
            },
        },
    },
)
