src/snapshots/lis_lang__parser__tests__expr_obj_expr.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 22,
            line: 0,
            col: 22,
        },
        node: Obj {
            brace_l: Span {
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 1,
                    line: 0,
                    col: 1,
                },
                node: (),
            },
            props: [
                (
                    Span {
                        range: Pos {
                            offset: 2,
                            line: 0,
                            col: 2,
                        }..Pos {
                            offset: 3,
                            line: 0,
                            col: 3,
                        },
                        node: "x",
                    },
                    Span {
                        range: Pos {
                            offset: 5,
                            line: 0,
                            col: 5,
                        }..Pos {
                            offset: 10,
                            line: 0,
                            col: 10,
                        },
                        node: BinOp {
                            left: Span {
                                range: Pos {
                                    offset: 5,
                                    line: 0,
                                    col: 5,
                                }..Pos {
                                    offset: 6,
                                    line: 0,
                                    col: 6,
                                },
                                node: Num {
                                    val: 1.0,
                                },
                            },
                            op: Span {
                                range: Pos {
                                    offset: 7,
                                    line: 0,
                                    col: 7,
                                }..Pos {
                                    offset: 8,
                                    line: 0,
                                    col: 8,
                                },
                                node: Add,
                            },
                            right: Span {
                                range: Pos {
                                    offset: 9,
                                    line: 0,
                                    col: 9,
                                }..Pos {
                                    offset: 10,
                                    line: 0,
                                    col: 10,
                                },
                                node: Num {
                                    val: 2.0,
                                },
                            },
                        },
                    },
                ),
                (
                    Span {
                        range: Pos {
                            offset: 12,
                            line: 0,
                            col: 12,
                        }..Pos {
                            offset: 13,
                            line: 0,
                            col: 13,
                        },
                        node: "y",
                    },
                    Span {
                        range: Pos {
                            offset: 15,
                            line: 0,
                            col: 15,
                        }..Pos {
                            offset: 20,
                            line: 0,
                            col: 20,
                        },
                        node: BinOp {
                            left: Span {
                                range: Pos {
                                    offset: 15,
                                    line: 0,
                                    col: 15,
                                }..Pos {
                                    offset: 16,
                                    line: 0,
                                    col: 16,
                                },
                                node: Num {
                                    val: 3.0,
                                },
                            },
                            op: Span {
                                range: Pos {
                                    offset: 17,
                                    line: 0,
                                    col: 17,
                                }..Pos {
                                    offset: 18,
                                    line: 0,
                                    col: 18,
                                },
                                node: Mul,
                            },
                            right: Span {
                                range: Pos {
                                    offset: 19,
                                    line: 0,
                                    col: 19,
                                }..Pos {
                                    offset: 20,
                                    line: 0,
                                    col: 20,
                                },
                                node: Num {
                                    val: 4.0,
                                },
                            },
                        },
                    },
                ),
            ],
            brace_r: Span {
                range: Pos {
                    offset: 21,
                    line: 0,
                    col: 21,
                }..Pos {
                    offset: 22,
                    line: 0,
                    col: 22,
                },
                node: (),
            },
        },
    },
)
