src/snapshots/lis_lang__parser__tests__expr_obj_key_str.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 29,
            line: 0,
            col: 29,
        },
        node: Obj {
            brace_l: Span {
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 1,
                    line: 0,
                    col: 1,
                },
                node: (),
            },
            props: [
                (
                    Span {
                        range: Pos {
                            offset: 2,
                            line: 0,
                            col: 2,
                        }..Pos {
                            offset: 8,
                            line: 0,
                            col: 8,
                        },
                        node: "name",
                    },
                    Span {
                        range: Pos {
                            offset: 10,
                            line: 0,
                            col: 10,
                        }..Pos {
                            offset: 16,
                            line: 0,
                            col: 16,
                        },
                        node: Str {
                            val: "john",
                        },
                    },
                ),
                (
                    Span {
                        range: Pos {
                            offset: 18,
                            line: 0,
                            col: 18,
                        }..Pos {
                            offset: 23,
                            line: 0,
                            col: 23,
                        },
                        node: "age",
                    },
                    Span {
                        range: Pos {
                            offset: 25,
                            line: 0,
                            col: 25,
                        }..Pos {
                            offset: 27,
                            line: 0,
                            col: 27,
                        },
                        node: Num {
                            val: 25.0,
                        },
                    },
                ),
            ],
            brace_r: Span {
                range: Pos {
                    offset: 28,
                    line: 0,
                    col: 28,
                }..Pos {
                    offset: 29,
                    line: 0,
                    col: 29,
                },
                node: (),
            },
        },
    },
)
