src/snapshots/lis_lang__parser__tests__expr_obj_nested.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 35,
            line: 0,
            col: 35,
        },
        node: Obj {
            brace_l: Span {
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 1,
                    line: 0,
                    col: 1,
                },
                node: (),
            },
            props: [
                (
                    Span {
                        range: Pos {
                            offset: 2,
                            line: 0,
                            col: 2,
                        }..Pos {
                            offset: 6,
                            line: 0,
                            col: 6,
                        },
                        node: "user",
                    },
                    Span {
                        range: Pos {
                            offset: 8,
                            line: 0,
                            col: 8,
                        }..Pos {
                            offset: 33,
                            line: 0,
                            col: 33,
                        },
                        node: Obj {
                            brace_l: Span {
                                range: Pos {
                                    offset: 8,
                                    line: 0,
                                    col: 8,
                                }..Pos {
                                    offset: 9,
                                    line: 0,
                                    col: 9,
                                },
                                node: (),
                            },
                            props: [
                                (
                                    Span {
                                        range: Pos {
                                            offset: 10,
                                            line: 0,
                                            col: 10,
                                        }..Pos {
                                            offset: 14,
                                            line: 0,
                                            col: 14,
                                        },
                                        node: "name",
                                    },
                                    Span {
                                        range: Pos {
                                            offset: 16,
                                            line: 0,
                                            col: 16,
                                        }..Pos {
                                            offset: 22,
                                            line: 0,
                                            col: 22,
                                        },
                                        node: Str {
                                            val: "john",
                                        },
                                    },
                                ),
                                (
                                    Span {
                                        range: Pos {
                                            offset: 24,
                                            line: 0,
                                            col: 24,
                                        }..Pos {
                                            offset: 27,
                                            line: 0,
                                            col: 27,
                                        },
                                        node: "age",
                                    },
                                    Span {
                                        range: Pos {
                                            offset: 29,
                                            line: 0,
                                            col: 29,
                                        }..Pos {
                                            offset: 31,
                                            line: 0,
                                            col: 31,
                                        },
                                        node: Num {
                                            val: 25.0,
                                        },
                                    },
                                ),
                            ],
                            brace_r: Span {
                                range: Pos {
                                    offset: 32,
                                    line: 0,
                                    col: 32,
                                }..Pos {
                                    offset: 33,
                                    line: 0,
                                    col: 33,
                                },
                                node: (),
                            },
                        },
                    },
                ),
            ],
            brace_r: Span {
                range: Pos {
                    offset: 34,
                    line: 0,
                    col: 34,
                }..Pos {
                    offset: 35,
                    line: 0,
                    col: 35,
                },
                node: (),
            },
        },
    },
)
