src/snapshots/lis_lang__parser__tests__expr_op_method_call.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 16,
            line: 0,
            col: 16,
        },
        node: PropAccess {
            obj: Span {
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 7,
                    line: 0,
                    col: 7,
                },
                node: BinOp {
                    left: Span {
                        range: Pos {
                            offset: 1,
                            line: 0,
                            col: 1,
                        }..Pos {
                            offset: 2,
                            line: 0,
                            col: 2,
                        },
                        node: Num {
                            val: 1.0,
                        },
                    },
                    op: Add,
                    op_tok: Token {
                        sigil: Plus,
                        range: Pos {
                            offset: 3,
                            line: 0,
                            col: 3,
                        }..Pos {
                            offset: 4,
                            line: 0,
                            col: 4,
                        },
                    },
                    right: Span {
                        range: Pos {
                            offset: 5,
                            line: 0,
                            col: 5,
                        }..Pos {
                            offset: 6,
                            line: 0,
                            col: 6,
                        },
                        node: Num {
                            val: 2.0,
                        },
                    },
                },
            },
            dot_tok: Token {
                sigil: Dot,
                range: Pos {
                    offset: 7,
                    line: 0,
                    col: 7,
                }..Pos {
                    offset: 8,
                    line: 0,
                    col: 8,
                },
            },
            prop: "toString",
        },
    },
)
