src/snapshots/lis_lang__parser__tests__expr_ops.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 10,
            line: 0,
            col: 10,
        },
        node: BinOp {
            left: Span {
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 1,
                    line: 0,
                    col: 1,
                },
                node: Num {
                    val: 1.0,
                },
            },
            op: Add,
            op_tok: Token {
                sigil: Plus,
                range: Pos {
                    offset: 2,
                    line: 0,
                    col: 2,
                }..Pos {
                    offset: 3,
                    line: 0,
                    col: 3,
                },
            },
            right: Span {
                range: Pos {
                    offset: 4,
                    line: 0,
                    col: 4,
                }..Pos {
                    offset: 10,
                    line: 0,
                    col: 10,
                },
                node: BinOp {
                    left: Span {
                        range: Pos {
                            offset: 4,
                            line: 0,
                            col: 4,
                        }..Pos {
                            offset: 6,
                            line: 0,
                            col: 6,
                        },
                        node: UnaryOp {
                            op: Neg,
                            op_tok: Token {
                                sigil: Minus,
                                range: Pos {
                                    offset: 4,
                                    line: 0,
                                    col: 4,
                                }..Pos {
                                    offset: 5,
                                    line: 0,
                                    col: 5,
                                },
                            },
                            expr: Span {
                                range: Pos {
                                    offset: 5,
                                    line: 0,
                                    col: 5,
                                }..Pos {
                                    offset: 6,
                                    line: 0,
                                    col: 6,
                                },
                                node: Num {
                                    val: 2.0,
                                },
                            },
                        },
                    },
                    op: Mul,
                    op_tok: Token {
                        sigil: Star,
                        range: Pos {
                            offset: 7,
                            line: 0,
                            col: 7,
                        }..Pos {
                            offset: 8,
                            line: 0,
                            col: 8,
                        },
                    },
                    right: Span {
                        range: Pos {
                            offset: 9,
                            line: 0,
                            col: 9,
                        }..Pos {
                            offset: 10,
                            line: 0,
                            col: 10,
                        },
                        node: Num {
                            val: 3.0,
                        },
                    },
                },
            },
        },
    },
)
