src/snapshots/lis_lang__parser__tests__expr_ops_parens.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 11,
            line: 0,
            col: 11,
        },
        node: BinOp {
            left: Span {
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 7,
                    line: 0,
                    col: 7,
                },
                node: BinOp {
                    left: Span {
                        range: Pos {
                            offset: 1,
                            line: 0,
                            col: 1,
                        }..Pos {
                            offset: 2,
                            line: 0,
                            col: 2,
                        },
                        node: Num {
                            val: 1.0,
                        },
                    },
                    op: Span {
                        range: Pos {
                            offset: 3,
                            line: 0,
                            col: 3,
                        }..Pos {
                            offset: 4,
                            line: 0,
                            col: 4,
                        },
                        node: Add,
                    },
                    right: Span {
                        range: Pos {
                            offset: 5,
                            line: 0,
                            col: 5,
                        }..Pos {
                            offset: 6,
                            line: 0,
                            col: 6,
                        },
                        node: Num {
                            val: 2.0,
                        },
                    },
                },
            },
            op: Span {
                range: Pos {
                    offset: 8,
                    line: 0,
                    col: 8,
                }..Pos {
                    offset: 9,
                    line: 0,
                    col: 9,
                },
                node: Mul,
            },
            right: Span {
                range: Pos {
                    offset: 10,
                    line: 0,
                    col: 10,
                }..Pos {
                    offset: 11,
                    line: 0,
                    col: 11,
                },
                node: Num {
                    val: 3.0,
                },
            },
        },
    },
)
